[package]
name = "mud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
strum = "0.26.2"
strum_macros = "0.26.2"
stylish = {version = "0.1.0", features = ["ansi", "plain"]}
tokio = {version = "1.37.0", features = ["rt", "rt-multi-thread", "io-util", "macros", "net", "sync", "time"]}
tokio-stream = "0.1.15"
tokio-util = {version = "0.7.10", features = ["codec"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
# TODO: Make this a real dependency
merc-parser = { path = "../merc-parser" }
clap = {version = "4.5.4", features = ["derive"]}
clio = {version = "0.3.5", features = ["clap-parse"]}
figment = { version = "0.10.18", features = ["toml"] }
serde = { version = "1.0.198", features = ["serde_derive"] }
patharg = { version = "0.4.0", features = ["serde"] }
